--- a/app/styles/globals.css
+++ b/app/styles/globals.css
@@ -68,3 +68,37 @@ body {
   text-fill-color: transparent;
   text-shadow: 0px 2px 1px rgba(0, 0, 0, 0.05);
 }
+
+/* flex items-center
+justify-center
+py-2
+px-4
+rounded-lg
+border
+border-primary-light
+dark:border-primary-dark
+text-primary-light
+dark:text-primary-dark
+hover:bg-primary-light
+hover:text-white
+dark:hover:bg-primary-dark
+dark:hover:text-white
+transition-colors
+text-sm font-medium 
+*/
+
+.button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding-inline: 0.5rem;
+  padding-block: 0.5rem;
+  border-radius: 0.5rem;
+  border-width: 1px;
+  border-style: solid;
+  border-color: #ff8a50;
+  color: #ff8a50;
+  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out;
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+}
